option('font_engine', type: 'combo', choices: ['freetype', 'none'], value: 'freetype', description: 'Font engine to build RmlUi with.')
option('harfbuzz_text_shaping', type: 'boolean', value: false, description: 'Enable HarfBuzz for text shaping. Requires a custom font engine implementation.')
option('lua_bindings', type: 'boolean', value: false, description: 'Build Lua bindings.')
option('lottie_plugin', type: 'boolean', value: false, description: 'Enable plugin for Lottie animations. Requires the rlottie library.')
option('svg_plugin', type: 'boolean', value: false, description: 'Enable plugin for SVG images. Requires the lunasvg library.')
option('thirdparty_containers', type: 'boolean', value: true, description: 'Enable integrated third-party containers for improved performance.')
option('matrix_row_major', type: 'boolean', value: false, description: 'Use row-major matrices. Column-major is the default.')
option('rmlui_custom_rtti_impl', type: 'boolean', value: true, description: 'Build RmlUi with a custom implementation of RTTI.')
option('precompiled_headers', type: 'boolean', value: true, description: 'Enable precompiled headers for RmlUi.')
